# eastwood-tidy

./: .clang_format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  EastwoodTidyModule.cpp  LICENSE  README.md  Rule11eCheck.cpp  Rule1DCheck.cpp  Rule1DCheck.h  Rule1aCheck.cpp  Rule1aCheck.h  Rule1cCheck.cpp  Rule1cCheck.h  Rule1dCheck.h  Rule4aCheck.cpp  Rule4aCheck.h  Rule4cCheck.cpp  Rule4cCheck.h  eastwood-tidy.code-workspace  gen.py  tags
setup/: CMakeLists.txt  ClangTidyForceLinker.h
test/: .gitignore  CMakeLists.txt  README.md  eastwood-rule-11a.c  eastwood-rule-11c.c  eastwood-rule-11d.c  eastwood-rule-12a.c  eastwood-rule-12b.c  eastwood-rule-12c.c  eastwood-rule-1c.c  eastwood-rule-2a.c  eastwood-rule-3a.c  eastwood-rule-3b.c  eastwood-rule-3c.c  eastwood-rule-3d.c  eastwood-rule-3e.c  eastwood-rule-3f.c  eastwood-rule-4a.c  eastwood-rule-4b.c  eastwood-rule-4c.c  eastwood-rule-5a.c  eastwood-rule-5b.c  eastwood-rule-5c.c  eastwood-rule-5d.c  eastwood-rule-5e.c  eastwood-rule-6a.c  eastwood-rule-7a.c  eastwood-rule-8a.c  eastwood-rule-8b.c  eastwood-rule-8c.c  eastwood-rule-8d.c  eastwood-rule-8e.c  eastwood-rule-8g.c  eastwood-rule-9c.c  eastwood-rule-9d.c  pyproject.toml  style_sample.c  style_sample.h  test-create.py  test-spec.json  (+1 more)
test/define_indent_in_function/: test.c
test/ettest/: config.json  filetest.py  fixtures.py  rule.py  snippets.py
test/ettest/test/: test_eastwood_tidy_tests.py
test/ettest/testcases/base/: test_base_files.py  test_file_rule_10_a.py  test_file_rule_11_a.py  test_file_rule_11_b.py  test_file_rule_11_c.py  test_file_rule_11_d.py  test_file_rule_11_e.py  test_file_rule_12_a.py  test_file_rule_12_b.py  test_file_rule_12_c.py  test_file_rule_1_a.py  test_file_rule_1_b.py  test_file_rule_1_c.py  test_file_rule_1_d.py  test_file_rule_2_a.py  test_file_rule_2_b.py  test_file_rule_3_a.py  test_file_rule_3_b.py  test_file_rule_3_c.py  test_file_rule_3_d.py  test_file_rule_4_a.py  test_file_rule_4_b.py  test_file_rule_4_c.py  test_file_rule_5_a.py  test_file_rule_5_b.py  test_file_rule_5_c.py  test_file_rule_5_d.py  test_file_rule_5_e.py  test_file_rule_6_a.py  test_file_rule_7_a.py  test_file_rule_8_a.py  test_file_rule_8_b.py  test_file_rule_8_c.py  test_file_rule_8_d.py  test_file_rule_8_e.py  test_file_rule_8_f.py  test_file_rule_8_g.py  test_file_rule_9_a.py  test_file_rule_9_b.py  test_file_rule_9_c.py  (+2 more)
test/ettest/testcases/base/tests/: a.h  b.h  c.h  eastwood-rule-10a.c  eastwood-rule-10a.h  eastwood-rule-11a.c  eastwood-rule-11a.h  eastwood-rule-11b.c  eastwood-rule-11b.h  eastwood-rule-11c.c  eastwood-rule-11c.h  eastwood-rule-11d.c  eastwood-rule-11d.h  eastwood-rule-11e.c  eastwood-rule-11e.h  eastwood-rule-12a.c  eastwood-rule-12a.h  eastwood-rule-12b.c  eastwood-rule-12b.h  eastwood-rule-12c.c  eastwood-rule-12c.h  eastwood-rule-1a.c  eastwood-rule-1a.h  eastwood-rule-1b.c  eastwood-rule-1b.h  eastwood-rule-1c.c  eastwood-rule-1c.h  eastwood-rule-1d.c  eastwood-rule-1d.h  eastwood-rule-2a.c  eastwood-rule-2a.h  eastwood-rule-2b.c  eastwood-rule-2b.h  eastwood-rule-3a.c  eastwood-rule-3a.h  eastwood-rule-3b.c  eastwood-rule-3b.h  eastwood-rule-3c.c  eastwood-rule-3c.h  eastwood-rule-3d.c  (+53 more)
test/ettest/testcases/other/: test_run_tidy.c
test/ettest/testcases/regression/: test_regressions.py
test/ettest/testcases/regression/tests/every_error/: every_error.c  other.h
test/ettest/testcases/regression/tests/header_comments_73/: hw5.c  hw5.h  (+2 more)
test/ettest/testcases/snippets/tests/: test_snippets.py  test_snippets_rule_10_a.py  test_snippets_rule_11_a.py  test_snippets_rule_11_b.py  test_snippets_rule_11_c.py  test_snippets_rule_11_d.py  test_snippets_rule_11_e.py  test_snippets_rule_12_a.py  test_snippets_rule_12_b.py  test_snippets_rule_12_c.py  test_snippets_rule_1_a.py  test_snippets_rule_1_b.py  test_snippets_rule_1_c.py  test_snippets_rule_1_d.py  test_snippets_rule_2_a.py  test_snippets_rule_2_b.py  test_snippets_rule_3_a.py  test_snippets_rule_3_b.py  test_snippets_rule_3_c.py  test_snippets_rule_3_d.py  test_snippets_rule_4_a.py  test_snippets_rule_4_b.py  test_snippets_rule_4_c.py  test_snippets_rule_5_a.py  test_snippets_rule_5_b.py  test_snippets_rule_5_c.py  test_snippets_rule_5_d.py  test_snippets_rule_5_e.py  test_snippets_rule_6_a.py  test_snippets_rule_7_a.py  test_snippets_rule_8_a.py  test_snippets_rule_8_b.py  test_snippets_rule_8_c.py  test_snippets_rule_8_d.py  test_snippets_rule_8_e.py  test_snippets_rule_8_f.py  test_snippets_rule_8_g.py  test_snippets_rule_9_a.py  test_snippets_rule_9_b.py  test_snippets_rule_9_c.py  (+2 more)
test/old/: CMakeLists.txt  old-eastwood-rule-1a.c  test-spec.json  test.py
test/old/scripts/: test-create.py
test/old/src/I/: test_I_A_fail.h  test_I_A_pass.c  test_I_B_pass.h  test_I_C_fail.c  test_I_C_fail.h  test_I_D_fail.h  test_I_D_pass.h
test/old/src/IV/: test_IV_C_fail.h  test_IV_C_pass.c  test_IV_C_pass.h
test/old/src/XI/: test_XI_E_fail.h  test_XI_E_pass.c
test/regression/: empty_line_comment.c  empty_line_comment.h  for_loop_multiple_assignment_1734.c  issue_12.c  issue_44.c  issue_46.c  issue_50.c  issue_51.c  issue_52.c  issue_52.h  issue_58.c  issue_60.c  issue_62.c
test/regression/another_switch_issue/: hw4.c  hw4.h  test.c
test/regression/for_loop_multiple_assign/: hw8.c  hw8.h
test/regression/indentation_missing_header_vardef/: hw8.c  hw8.h
test/regression/issue_51/: hw7.c  test.c
test/regression/issue_54/: hw7.c  hw7.h
test/regression/loop_indentation_errors/: hw1.c  hw1.h
test/regression/more_indent_issues/: hw5.h  hw5_main.c  repro.c
test/regression/no_trailing_whitespace_detection/: hw11.c  hw11.h  reproducer.c
test/regression/rule5d_crash/: hw2.c  hw2.h
test/regression/two_space_comments/: test.c
test/scripts/: cmake-file-create.py  test-create.py
test/src/I/: test_I_A_fail.c  test_I_A_pass.h  test_I_B_fail.c  test_I_B_fail.h  test_I_B_pass.c  test_I_C_fail.c  test_I_C_pass.c  test_I_C_pass.h  test_I_D_fail.c  test_I_D_pass.c
test/src/IV/: test_IV_C_fail.c
test/src/XI/: test_XI_E_fail.c  test_XI_E_pass.h
(+178 files in other folders)
