[tool.poetry]
name = "ettest"
version = "0.1.0"
description = "Test cases for eastwood-tidy"
authors = ["novafacing <rowanbhart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 88
disable = ["attribute-defined-outside-init", "logging-fstring-interpolation"]

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "snake_case"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
variable-naming-style = "any"

[tool.pylint.format]
expected-line-ending-format = "LF"
max-module-lines = 600
logging-format-style = "new"
max-args = 6
max-attributes = 12
max-bool-expr = 4
max-locals = 16
max-parents = 7
max-public-methods = 16
max-statements = 64
min-public-methods = 1

[tool.pylint.exceptions]
overgeneral-exceptions = "Exception"

[tool.black]
line-length = 88
target-version = ["py36","py37","py38"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.mypy]
follow_imports = "normal"
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true

[tool.isort]
profile = "black"
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
markers = [
  "rule1: Marker for tests belonging to Rule 1",
  "rule2: Marker for tests belonging to Rule 2",
  "rule3: Marker for tests belonging to Rule 3",
  "rule4: Marker for tests belonging to Rule 4",
  "rule5: Marker for tests belonging to Rule 5",
  "rule6: Marker for tests belonging to Rule 6",
  "rule7: Marker for tests belonging to Rule 7",
  "rule8: Marker for tests belonging to Rule 8",
  "rule9: Marker for tests belonging to Rule 9",
  "rule10: Marker for tests belonging to Rule 10",
  "rule11: Marker for tests belonging to Rule 11",
  "rule12: Marker for tests belonging to Rule 12",
]